--- a/style.css
+++ b/style.css
@@ -13,9 +13,13 @@ body {
 	display: flex;
 	flex-flow: column;
 }
+/* Header */
 .title {
 	padding: 20px 0;
+	font-size: 50px;
+	text-align: center;
 }
+/* Main content */
 .container {
 	display: flex;
 	justify-content: center;
@@ -42,10 +46,6 @@ body {
 	background-color: white;
 	opacity: 1;
 }
-.title {
-	font-size: 50px;
-	text-align: center;
-}
 button {
 	border: 1px solid #d6ed17ff;
 	border-radius: 5px;
@@ -63,6 +63,7 @@ button:hover {
 	transition: transform 0.1s ease-in-out;
 	transform: scale(1.1);
 }
+/* Color input style */
 .colorPicker {
 	-webkit-appearance: none;
 	-moz-appearance: none;
@@ -81,11 +82,12 @@ button:hover {
 	border-radius: 15px;
 	border: none;
 }
-
+/*footer*/
 .footer p {
 	text-align: center;
 	padding: 30px;
 }
 .gridSlider {
 	width: inherit;
+	border-radius: 20px;
 }
